update issue logic and sonar about design persistence